flickering styles at loading fixed

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -27,3 +27,23 @@ p {
 .error-message::before {
   content: '• ';
 }
+
+.topnav{
+  background-color:#333;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+}
+.topnav a.tab-nav{
+  display: flex;
+  align-items: center;
+      
+}
+.topnav a.tab-nav {
+  color: white !important;
+  padding: 20px;
+  font-size: 20px;
+} 
+.topnav a.tab-nav:hover {
+  background-color: #778899;
+}
